alb/frontend2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend2
  name: frontend2service
  namespace: default
spec:
  clusterIP: 172.20.168.50
  clusterIPs:
    - 172.20.168.50
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend2
  sessionAffinity: None
  type: ClusterIP
